# line-bot-dementia-analysis

./: .env.backup  .env.backup.20250805_121946  .env.example  .env.template  .gitignore  .replit  20250803_ALIGNMENT_STATUS_REPORT.md  =2.32.3  API_KEYS_SETUP_GUIDE.md  AUTO_REPAIR_SYSTEM_README.md  BON_MAV_SHAP_LIME_INTEGRATION.md  BOT_TESTING_GUIDE.md  BULLETPROOF_SOLUTION.md  COMPLETE_FIX_REPORT.md  COMPLETE_TECHNICAL_ARCHITECTURE_INTEGRATION.md  COMPREHENSIVE_FIX_REPORT.md  COMPREHENSIVE_SYSTEM_FIX_REPORT.md  COMPREHENSIVE_SYSTEM_OVERVIEW.md  COMPREHENSIVE_SYSTEM_PLANNING.md  COMPREHENSIVE_TECHNICAL_ARCHITECTURE.md  CORRECTED_WORKFLOW_ANALYSIS.md  CREDENTIALS_FIXED_SUCCESS.md  CREDENTIALS_VERIFICATION_REPORT.md  CURRENT_ERROR_STATUS.md  CURRENT_WEBHOOK_URL.md  DEBUG_REPORT.md  DEBUG_REPORT_FINAL.md  DEPLOYMENT_COMPLETE.md  DETAILED_WORKFLOW_ANALYSIS.md  ENHANCED_DEMO_SUMMARY.md  ENHANCED_M1_FLEX_DESIGN_GUIDE.md  ENHANCED_VISUALIZATION_SYSTEM.md  FINAL_ALT_TEXT_FIX_SUCCESS.md  FINAL_API_KEYS_SUMMARY.md  FINAL_COMPLETE_STATUS.md  FINAL_COMPLETE_SUCCESS.md  FINAL_DEPLOYMENT_SUCCESS.md  FINAL_FLEX_MESSAGE_FIX.md  FINAL_FLEX_MESSAGE_FIX_COMPLETE.md  FINAL_GEMINI_FLEX_LIFF_SUMMARY.md  (+404 more)
.shh/: id_rsa
api/: main.py
backup/: api_test.py.20250728_152733.bak  app.py.20250728_152733.bak  create_m2_data.py.20250728_152733.bak  create_m3_data.py.20250728_152733.bak  deploy_to_replit.py.20250728_152733.bak  enhanced_xai_api.py.20250728_152733.bak  flex_message_generator.py.20250728_152733.bak  flex_message_server.py.20250728_152733.bak  line_bot_app.py.20250728_152733.bak  (+20 more)
(+113 files in other folders)
